@@ -158,7 +158,8 @@ YouTube only \- specify a developer key
 \fB\-d\fR DATE, \fB\-\-date\fR=\fIDATE\fR
 Date in YYYY\-MM\-DD format. Picasa only \- sets the date
 of the album  Calendar only \- date of the event to add
-/ look for.        Can also specify a range via YYYYMM\-DD,YYYY\-MM\-DD
+/ look for.  Can also specify a range with a comma:
+"YYYY\-MM\-DD", events between date and future. "YYYYMM\-DD,YYYY\-MM\-DD" events between two dates.
 .TP
 \fB\-\-delimiter\fR=\fIDELIMITER\fR
 Specify a delimiter for the output of the list task.
